--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/server": "^4.11.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
     "graphql": "^16.9.0",
+    "graphql-tag": "^2.12.6",
+    "graphql-yoga": "^5.7.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
